--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
+plugins {
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+}
+
 apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = 'ohtu.Main'
+
+javafx {
+    version = '12'
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 
 repositories {
     jcenter()
