--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ repositories {
     jcenter()
 }
 project.ext {
-    cucumberVersion = '1.2.5'
+    cucumberVersion = '1.2.6'
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.testfx:testfx-core:4.0.+"
     testCompile "org.testfx:testfx-junit:4.0.+"    
-    testCompile "org.testfx:openjfx-monocle:8u76-b04"
+    testCompile "org.testfx:openjfx-monocle:jdk-11+26"
     testCompile 'info.cukes:cucumber-java:' + cucumberVersion
     testCompile 'info.cukes:cucumber-junit:' + cucumberVersion
 }
