small instruction comment

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 test {
   // set a system property for the test JVM(s)
   systemProperty 'testfx.robot', 'glass'
-  systemProperty 'testfx.headless', 'true'
+  systemProperty 'testfx.headless', 'true' // set false to see test running
   systemProperty 'prism.order', 'sw'
   systemProperty 'prism.text', 't2k'
   systemProperty 'java.awt.headless', 'true'
